--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name="com.example.cursoandroidutnnivel1.clase16.LayQR"
+            android:name="com.example.cursoandroidutnnivel1.clase9.lay_libros"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -53,12 +53,7 @@
         <activity android:name="com.example.cursoandroidutnnivel1.clase16.LayResultado" >
         </activity>
 
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-        <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBdP5FoClCnUCGoxmdZ6r6vOwa2eCjxmZw" />
+        
     </application>
 
 </manifest>
